fix font-size Collapse-title

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -12,7 +12,7 @@
         color: $color-primary;
         border-radius: 10px;
         font-weight: 500;
-        font-size: clamp(13px, 2vw, 18px);
+        font-size: 13px;
         padding: 10px 15px;
         cursor: pointer;
         .arrow{
